--- a/watchlist.html
+++ b/watchlist.html
@@ -5,18 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Movie Finder</title>
+    <title>Document</title>
 </head>
 <body>
     <div class="search-container">
         <h1>Movie Finder</h1>
-        <div id="search-box">
-            <input type="text" id="movieName" placeholder="Movie name" />
-        </div>
-        <button id="searchBtn">Search</button>
-        <a href="./watchlist.html">To Watchlist</a>
+        <a href="./index.html">To Search</a>
     </div>
-    <div id="results-container" class="display-container"></div>
-    <script src="index.js"></script>
+    <div id="watchlist-container"></div>
+    <script src="watchlist.js"></script>
 </body>
 </html>
